# waveshare-epaper7.5

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp
lib/Config/: DEV_Config.h  Debug.h  RPI_gpiod.h  dev_hardware_SPI.h  sysfs_gpio.h  sysfs_software_spi.h
lib/Fonts/: fonts.h
lib/GUI/: GUI_BMPfile.c  GUI_BMPfile.h  GUI_Paint.c  GUI_Paint.h
lib/e-Paper/: EPD_7in5_V2.h  ImageData.h
lib/nagato/: curl.cpp  curl.hpp  weather.cpp  weather.hpp
scripts/: cpu.py  font.py  image_converte.py  svg_conv.py  video_editor.py  youtube_downloader.py
